@@ -71,6 +71,8 @@ New script for displaying profile photos.
 
 Allow cancelled orders to be reopened.
 
+Added the restable to the xml from report_profile_print.
+
 eportfolio_reports_publish is under construction!
 
 
